  - py-end-of-statement-bol
  - py-end-of-top-level-bol

  - py-flycheck-mode - toggle `flycheck-mode' from menu "Checks"


- New helper functions, like
  - py--end-of-block-bol-p
  - py--end-of-clause-bol-p
  etc.

  Functions in a boolean sense just stating if being at an end or
  start no longer a command. Renamed as interanal
  functions with prefix `py--' now.


- TAB-indent from column zero: go to outmost first, lp:1375122
- (I)Python-shell setup made more reliable


New in version 6.2.0
---------------------

- Support for large output
  new commands py-fast-process, py-fast-...
  Fixes: large output makes Emacs freeze, lp:1253907

  Python code now might be processed by an
  - interactive Python shell (DEFAULT)
  - non-interactive Python (`py-fast-process-p', if large output)

  Both processes might run in
  - session, i.e. start from possible previous state (DEFAULT)
  - dedicated, (`py-dedicated-process-p', run in separate process)

- TAB bound to `py-indent-or-complete', completes at EOL.
  Calls to `tab-to-tab-stop' removed, as these would conflict.
  Use `C-q TAB' to insert a literally TAB-character.

- py-fast-complete
  Complete word before point, if any, use `py-fast-process'

- `py-shell-complete-or-indent'
  In shell: complete or indent depending on the context.
  If cursor is at current-indentation and further indent
  seems reasonable, indent. Otherwise try to complete.

- Python specific hide-show
  py-hide-region
  py-show-region
  py-hide-statement
  py-show-statement
  py-hide-block
  py-show-block
  py-hide-clause
  py-show-clause
  py-hide-block-or-clause
  py-show-block-or-clause
  py-hide-def
  py-show-def
  py-hide-class
  py-show-class
  py-hide-expression
  py-show-expression
  py-hide-partial-expression
  py-show-partial-expression
  py-hide-line
  py-show-line
  py-hide-top-level
  py-show-top-level

- `py-shell' uses new `py-shell-mode', `py-shell-mode-map'
  M-x describe-mode RET mentions edit available commands
  Menu "Py-Shell"
